# zero2prod

./: .gitignore  Cargo.toml  README.md  tarpaulin.toml
.circleci/: config.yml
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: lib.rs  main.rs  models.rs  schemas.rs
tests/: api.rs  health_check.rs
