[package]
name = "zero2prod"
version = "0.1.1"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = "~0.8"
axum-test = "^17.3"
dotenvy = "0.15.7"
reqwest = "^0.12"
migration = { path = "migration" } 
serde = { version="^1.0.140", features = ["derive"]}
serde_json = { version="^1.0.140"}
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"] }
sea-orm = { version = "^1.1", features = ["sqlx-postgres","runtime-tokio", "macros"] }
tower-http = "0.6.2"
